# bicycleModel_osqpMPC

./: .gitignore  CMakeLists.txt  README.md  bicycleModelMPC.cpp
